--- a/ci/prototype.yml
+++ b/ci/prototype.yml
@@ -21,9 +21,7 @@ run_prototype_test:
   stage: test
   image: ${PERSIST_IMAGE_NAME}
   script:
-    # here should go the commands to run the actual applications, `ls` is just to show what is already in the container, to get an idea
-    - ls -lh /src
-    - ls -lh --recursive /usr/local/
+    - (cd /src/integration && ./test_sample_mock.py)
 
   variables:
     USE_MPI: 'YES'
