--- a/ci/prototype.yml
+++ b/ci/prototype.yml
@@ -21,7 +21,9 @@ run_prototype_test:
   stage: test
   image: ${PERSIST_IMAGE_NAME}
   script:
-    - (cd /src/integration && ./test_sample_mock.py)
+    - cd /src/integration
+    - ./test_sample_mock.py
+    - ./test_sample_msolve.py
 
   variables:
     USE_MPI: 'YES'
