--- a/ci/Dockerfile_base
+++ b/ci/Dockerfile_base
@@ -4,9 +4,11 @@ ARG MPICH_VERSION=3.1.4
 
 RUN env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive apt-get update \
     && env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive apt-get -y --fix-missing upgrade
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get -y install build-essential \
-    wget
+    wget \
+  && rm -rf /var/lib/apt/lists/*
 
 RUN cd /tmp \
   && wget -q http://www.mpich.org/static/downloads/${MPICH_VERSION}/mpich-${MPICH_VERSION}.tar.gz \
@@ -18,7 +20,8 @@ RUN cd /tmp \
   && make install \
   && ldconfig \
   && cd .. \
-  && rm -Rf mpich-${MPICH_VERSION}{,.tar.gz}
+  && rm -Rf mpich-${MPICH_VERSION}
+  && rm -Rf mpich-${MPICH_VERSION}.tar.gz
 
 RUN env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive \
     apt-get -y install libgsl-dev \
@@ -31,7 +34,8 @@ RUN env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive \
     python3-pandas \
     libmkldnn-dev \
     apt-transport-https \
-    pkg-config
+    pkg-config \
+  && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m pip install meson \
     ninja \
@@ -45,5 +49,4 @@ RUN cd /tmp \
   && rm packages-microsoft-prod.deb \
   && apt-get update \
   && apt-get install -y dotnet-sdk-6.0
-
-
+  && rm -rf /var/lib/apt/lists/*
