--- a/ci/Dockerfile_base
+++ b/ci/Dockerfile_base
@@ -3,7 +3,7 @@ FROM docker.io/nvidia/cuda:11.2.0-cudnn8-devel-ubuntu20.04
 ARG MPICH_VERSION=3.1.4
 
 RUN env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive apt-get update \
-    && env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive apt-get -y --fix-missing upgrade
+    && env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive apt-get -y --fix-missing upgrade \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get -y install build-essential \
@@ -20,7 +20,7 @@ RUN cd /tmp \
   && make install \
   && ldconfig \
   && cd .. \
-  && rm -Rf mpich-${MPICH_VERSION}
+  && rm -Rf mpich-${MPICH_VERSION} \
   && rm -Rf mpich-${MPICH_VERSION}.tar.gz
 
 RUN env TZ=Europe/Zurich DEBIAN_FRONTEND=noninteractive \
@@ -48,5 +48,5 @@ RUN cd /tmp \
   && dpkg -i packages-microsoft-prod.deb \
   && rm packages-microsoft-prod.deb \
   && apt-get update \
-  && apt-get install -y dotnet-sdk-6.0
+  && apt-get install -y dotnet-sdk-6.0 \
   && rm -rf /var/lib/apt/lists/*
